GH-2814: OTel tags for RabbitTemplate and RabbitListener
Fixes: #2814
Issue link: https://github.com/spring-projects/spring-amqp/issues/2814

* Add Opentelemetry tags `RabbitTemplate `
* Add Opentelemetry tags `RabbitListenerObservationConvention`