@@ -1,5 +1,5 @@
 /*
- * Copyright 2022 the original author or authors.
+ * Copyright 2022-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -21,7 +21,6 @@ import static org.assertj.core.api.Assertions.assertThat;
 import java.util.List;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 
 import org.springframework.amqp.core.Message;
 import org.springframework.amqp.rabbit.annotation.EnableRabbit;
@@ -35,6 +34,7 @@ import org.springframework.context.annotation.AnnotationConfigApplicationContext
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
+import io.micrometer.common.KeyValue;
 import io.micrometer.common.KeyValues;
 import io.micrometer.core.tck.MeterRegistryAssert;
 import io.micrometer.observation.ObservationRegistry;
@@ -47,7 +47,6 @@ import io.micrometer.tracing.test.simple.SpansAssert;
 /**
  * @author Artem Bilan
  * @author Gary Russell
- *
  * @since 3.0
  */
 @RabbitAvailable(queues = { "int.observation.testQ1", "int.observation.testQ2" })
@@ -72,39 +71,68 @@ public class ObservationIntegrationTests extends SampleTestRunner {
 					.hasSize(4);
 			List<FinishedSpan> producerSpans = finishedSpans.stream()
 					.filter(span -> span.getKind().equals(Kind.PRODUCER))
-					.collect(Collectors.toList());
+					.toList();
 			List<FinishedSpan> consumerSpans = finishedSpans.stream()
 					.filter(span -> span.getKind().equals(Kind.CONSUMER))
-					.collect(Collectors.toList());
+					.toList();
 			SpanAssert.assertThat(producerSpans.get(0))
-					.hasTag("spring.rabbit.template.name", "template");
+					.hasTag("spring.rabbit.template.name", "template")
+					.hasTag("messaging.destination.name", "")
+					.hasTag("messaging.rabbitmq.destination.routing_key", "int.observation.testQ1");
 			SpanAssert.assertThat(producerSpans.get(0))
 					.hasRemoteServiceNameEqualTo("RabbitMQ");
 			SpanAssert.assertThat(producerSpans.get(1))
-					.hasTag("spring.rabbit.template.name", "template");
+					.hasTag("spring.rabbit.template.name", "template")
+					.hasTag("messaging.destination.name", "")
+					.hasTag("messaging.rabbitmq.destination.routing_key", "int.observation.testQ2");
 			SpanAssert.assertThat(consumerSpans.get(0))
-					.hasTagWithKey("spring.rabbit.listener.id");
+					.hasTagWithKey("spring.rabbit.listener.id")
+					.hasTag("messaging.destination.name", "int.observation.testQ1")
+					.hasTag("messaging.rabbitmq.message.delivery_tag", "1");
 			SpanAssert.assertThat(consumerSpans.get(0))
 					.hasRemoteServiceNameEqualTo("RabbitMQ");
 			assertThat(consumerSpans.get(0).getTags().get("spring.rabbit.listener.id")).isIn("obs1", "obs2");
 			SpanAssert.assertThat(consumerSpans.get(1))
 					.hasTagWithKey("spring.rabbit.listener.id");
 			assertThat(consumerSpans.get(1).getTags().get("spring.rabbit.listener.id")).isIn("obs1", "obs2");
+			SpanAssert.assertThat(consumerSpans.get(1))
+					.hasTagWithKey("spring.rabbit.listener.id")
+					.hasTag("messaging.destination.name", "int.observation.testQ2")
+					.hasTag("messaging.rabbitmq.message.delivery_tag", "1");
 			assertThat(consumerSpans.get(0).getTags().get("spring.rabbit.listener.id"))
 					.isNotEqualTo(consumerSpans.get(1).getTags().get("spring.rabbit.listener.id"));
 
 			MeterRegistryAssert.assertThat(getMeterRegistry())
 					.hasTimerWithNameAndTags("spring.rabbit.template",
-							KeyValues.of("spring.rabbit.template.name", "template"))
+							KeyValues.of(
+									KeyValue.of("spring.rabbit.template.name", "template"),
+									KeyValue.of("messaging.destination.name", ""),
+									KeyValue.of("messaging.rabbitmq.destination.routing_key", "int.observation.testQ1")
+							)
+					)
 					.hasTimerWithNameAndTags("spring.rabbit.template",
-							KeyValues.of("spring.rabbit.template.name", "template"))
+							KeyValues.of(
+									KeyValue.of("spring.rabbit.template.name", "template"),
+									KeyValue.of("messaging.destination.name", ""),
+									KeyValue.of("messaging.rabbitmq.destination.routing_key", "int.observation.testQ2")
+							)
+					)
 					.hasTimerWithNameAndTags("spring.rabbit.listener",
-							KeyValues.of("spring.rabbit.listener.id", "obs1"))
+							KeyValues.of(
+									KeyValue.of("spring.rabbit.listener.id", "obs1"),
+									KeyValue.of("messaging.destination.name", "int.observation.testQ1"),
+									KeyValue.of("messaging.rabbitmq.message.delivery_tag", "1")
+							)
+					)
 					.hasTimerWithNameAndTags("spring.rabbit.listener",
-							KeyValues.of("spring.rabbit.listener.id", "obs2"));
+							KeyValues.of(
+									KeyValue.of("spring.rabbit.listener.id", "obs2"),
+									KeyValue.of("messaging.destination.name", "int.observation.testQ2"),
+									KeyValue.of("messaging.rabbitmq.message.delivery_tag", "1")
+							)
+					);
 		};
 	}
-
 
 	@Configuration
 	@EnableRabbit
@@ -158,6 +186,5 @@ public class ObservationIntegrationTests extends SampleTestRunner {
 		}
 
 	}
-
 
 }
